--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,7 @@ development:
   database: RailsGame_dev 
   pool: 5
   timeout: 5000
-  username: postgres
-  password: chocolat
+  username: alexO
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,13 +18,11 @@ test:
   database: RailsGame_test
   pool: 5
   timeout: 5000
-  username: postgres
-  password: chocolat
+  username: alexO
 
 production:
   adapter: postgresql
   database: RailsGame_prod
   pool: 5
   timeout: 5000
-  username: postgres
-  password: chocolat
+  username: alexO
